# ai-translater

./: .gitignore  README.md  pyproject.toml
ocr_debug/: test_page_0001.json  test_page_0002.json
src/ai_translater/: __init__.py  main.py  ocr_engine.py  pdf_extractor.py  pdf_generator.py  translator.py  word_generator.py
tests/: __init__.py
work_27_28/: output.docx
work_27_28/ocr_results/: page_0001.json  page_0002.json
work_27_28/translations/: page_0001.json  page_0002.json
work_8_9/ocr_results/: page_0001.json  page_0002.json
work_8_9/translations/: page_0001.json  page_0002.json
work_test/ocr_results/: page_0001.json  page_0002.json
work_test/translations/: page_0001.json  page_0002.json
